# insales

./: .gitignore  README.md  api.ini.example  main.py  products.py.example  setup.cfg
api/: crud.py  decorators.py  endpoints.py  exceptions.py  formatters.py
api/images/: crud.py  utils.py
api/src/: __init__.py
dev/: main.py  requirements.txt  tools.py
dev/tools/: __init__.py  document.py  parser.py
discounts/: README.md  example.com.conf  main.py  schemas.py
examples/: images_uploader.py  products.py
insalesapi/: __init__.py  async_client.py  base_client.py  config.py  decorators.py  endpoints.py  exceptions.py  main.py  schemas.py  sync_client.py
insalesapi/clients/: __init__.py  async_client.py  base.py  schemas.py  sync_client.py
insalesapi/collections/: endpoints.py  filters.py  schemas.py
insalesapi/endpoints/: __init__.py  base.py  images.py  orders.py  products.py
insalesapi/images/: endpoints.py  schemas.py  utils.py
insalesapi/orders/: endpoints.py  schemas.py
insalesapi/products/: endpoints.py  filters.py  related.py  schemas.py
insalesapi/schemas/: __init__.py  base.py  clients.py  images.py  orders.py  products.py
insalesapi/src/: __init__.py  decorators.py  endpoints.py  exceptions.py  filters.py
insalesapi/where/: endpoints.py
utils/: backofficeSearchIds.js  generate_models.py  replace_uppercase.py
