[metadata]
name = InSalesAPI
version = 0.1.1a
description = Tools for working with InSales API
long_description = file: README.txt
license = MIT
author = headovich
author_email = alreayfamous@protonmail.com
classifiers =
    Development Status :: Alpha
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3

[options]
zip_safe = False
include_package_data = True
packages = find:
install_requires =
    setuptools
    requests
    fastapi

[flake8]
max-line-length = 120